fix highlight, align the line number

--- a/source/css/_partial/highlight.less
+++ b/source/css/_partial/highlight.less
@@ -53,7 +53,6 @@
 
         td {
             border: none;
-            vertical-align: top;
         }
 
         tr,
@@ -86,10 +85,6 @@
 
         }
 
-        .line {
-            font-size: @h-fs;
-            height: @h-fs * 1.6;
-        }
 
     }
 
